<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePage">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/rectangle_3"
        android:text="@string/library"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:backgroundTint="#B12365" />
    <Button
        android:id="@+id/button2"
        android:layout_marginTop="20dp"
        android:text="@string/e_library"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#B12365"/>
    <Button
        android:id="@+id/button3"
        android:layout_marginTop="20dp"
        android:text="@string/question_papers"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:layout_below="@id/button2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#B12365"/>

</RelativeLayout>